# annablelab.github.io

./: .gitignore  .prettierrc.yaml  CONTENT_CHANGES.md  MIGRATION.md  README.md  TESTING.md  UV_MIGRATION.md  YAML_EXTRACTION_SUMMARY.md  _config.yml  astro.config.mjs  index.md  netlify.toml  package-lock.json  package.json  pyproject.toml  run_tests.py  tsconfig.json
.github/workflows/: deploy.yml  format.yml  preview.yml  test-yaml.yml  typecheck.yml
_includes/: battery_automation.yaml  curtailment.yaml  dashboard.yaml  emhass.yaml  emhass_script.yaml
_layouts/: default.html
_site/: README.md  astro.config.mjs  feed.xml  index.html  sitemap.xml
assets/css/: style.css
pages/: architecture.md  automation.md  conclusion.md  dashboard.md  emhass.md  prerequisites.md  setup.md  trace.md
pr-preview/pr-20/: architecture.html  automation.html  conclusion.html  dashboard.html  emhass.html  index.html  prerequisites.html  setup.html  sitemap-0.xml  sitemap-index.xml  trace.html
public/examples/: trace script.generate_emhass_energy_plan_mpc 2025-11-23T08_57_37.319928+00_00.json
src/components/: CodeBlock.astro  Redirect.astro
src/includes/: battery_automation.yaml  curtailment.patch  curtailment.yaml  dashboard.yaml  emhass.yaml  emhass_automation.patch  emhass_automation.yaml  emhass_script.patch  emhass_script.yaml
src/layouts/: BaseLayout.astro
src/pages/: architecture.md  architecture.mdx  automation.astro  automation.md  automation.mdx  conclusion.md  conclusion.mdx  dashboard.astro  dashboard.md  dashboard.mdx  emhass.astro  emhass.md  emhass.mdx  index.md  index.mdx  prerequisites.mdx  setup.astro  setup.md  setup.mdx  trace.md  trace.mdx
src/styles/: custom.css
tests/: test_battery_automation.py
(+41 files in other folders)
