[project]
name = "emhass-guide"
version = "0.1.0"
description = "Home Assistant YAML testing for EMHASS guide"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.2",
    "voluptuous>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

# Note: Coverage is not applicable for YAML file testing
# If testing Python code in the future, uncomment below:
# [tool.coverage.run]
# source = ["src"]
# omit = ["tests/*", ".venv/*", "venv/*", "src/includes/*"]

